# robotic_exploration

./: README.md
exploration_sim_bringup/: CMakeLists.txt  package.xml
exploration_sim_bringup/config/: mapper_params_online_async.yaml  navigation_params.yaml  ros_gz_example_bridge.yaml
exploration_sim_bringup/launch/: diff_drive.launch.py  navigation_launch.launch.py  slam_toolbox.launch.py
exploration_sim_bringup/resources/: empty_map.pgm  empty_map.yaml  empty_map_serialized.data  large_empty_map.yaml
exploration_sim_description/: CMakeLists.txt  package.xml
exploration_sim_description/models/diff_drive/: model.sdf
exploration_sim_gazebo/: CMakeLists.txt  README.md
exploration_sim_gazebo/worlds/: diff_drive.sdf
exploration_sim_msgs/: CMakeLists.txt  package.xml
exploration_sim_msgs/msg/: ConnectivityGraph.msg  Edge.msg  FrontierCluster.msg  FrontierClusters.msg  TspProblem.msg
exploration_sim_planner/: CMakeLists.txt  compile_commands.json  package.xml
exploration_sim_planner/.cache/clangd/index/: PathPlannerNode.cpp.DDB34331CC757606.idx  PathPlannerNode.hpp.16BB928293F60158.idx
exploration_sim_planner/include/exploration_sim_planner/: ConnectedComponentsLabeling.hpp  CoveragePathPlannerNode.hpp  DiffDriveController.hpp  PathPlannerNode.hpp  PoseTransformListenerNode.hpp  ShortTermPathPlanner.hpp
exploration_sim_planner/include/exploration_sim_planner/coverage_planner/: ConnectedComponentsLabeling.hpp
exploration_sim_planner/include/exploration_sim_planner/nodes/: CoveragePathPlannerNode.hpp  DiffDriveControllerNode.hpp  ShortTermPlannerNode.hpp  TrajectoryTrackerNode.hpp
exploration_sim_planner/include/exploration_sim_planner/path_planner/: AStarPathPlanner.hpp  AbstractPathPlanner.hpp
exploration_sim_planner/include/exploration_sim_planner/short_term_planner/: ShortTermPathPlanner.hpp
exploration_sim_planner/include/exploration_sim_planner/trajectory_tracker/: AbstractTrajectoryTracker.hpp  MPCTrajectoryTracker.hpp  PurePursuitTracker.hpp
exploration_sim_planner/include/exploration_sim_planner/util/: AStar.hpp  AtspSolver.hpp  BSplineUtil.hpp  DubinsPath.hpp  EigenUtil.hpp  EsdfUtil.hpp  MpcController.hpp  MsgUtil.hpp  OgmView.hpp  OmplDubinsPath.hpp  UnionFind.hpp
exploration_sim_planner/src/: ConnectedComponentsLabeling.cpp  CoveragePathPlannerNode.cpp  DiffDriveController.cpp  PathPlannerNode.cpp  PoseTransformListenerNode.cpp  ShortTermPathPlanner.cpp  TrajectoryTrackerNode.cpp
exploration_sim_planner/src/controller/: DiffDriveController.cpp
exploration_sim_planner/src/coverage_planner/: ConnectedComponentsLabeling.cpp
exploration_sim_planner/src/nodes/: CoveragePathPlannerNode.cpp  DiffDriveControllerNode.cpp  PathPlannerNode.cpp  PoseTransformListenerNode.cpp  ShortTermPlannerNode.cpp  TrajectoryTrackerNode.cpp
exploration_sim_planner/src/path_planner/: AStarPathPlanner.cpp
exploration_sim_planner/src/short_term_planner/: ShortTermPathPlanner.cpp
exploration_sim_planner/src/trajectory_tracker/: MPCTrajectoryTracker.cpp  PurePursuitTracker.cpp
exploration_sim_planner/src/util/: BSplineUtil.cpp  DubinsPath.cpp  EsdfUtil.cpp  MpcController.cpp  SimulatedAnnealingSolver.cpp
exploration_sim_planner/test/: dubins_test.cpp  mpc_test.cpp  ompl_dubins_test.cpp
exploration_sim_rviz/: CMakeLists.txt  compile_commands.json  package.xml  rviz_common_plugins.xml
exploration_sim_rviz/.cache/clangd/index/: connectivity_graph_display.cpp.15238FD3C8C48FBB.idx  connectivity_graph_display.hpp.A388897F5A944C04.idx  frontier_display.cpp.80F67865DD4C9F17.idx  frontier_display.hpp.9BD3BD06F9A65113.idx
exploration_sim_rviz/include/exploration_sim_rviz/: connectivity_graph_display.hpp  frontier_display.hpp
exploration_sim_rviz/src/: connectivity_graph_display.cpp  frontier_display.cpp
exploration_sim_utils/: package.xml  setup.cfg  setup.py
exploration_sim_utils/exploration_sim_utils/: AtspSolver.py  ConnectivityGraphPlotter.py  FitSplines.py  PathGrapher.py  SaveMap.py  TrajectoryTracker.py
exploration_sim_utils/scripts/: AnalyticalControlUtil.py  AnalyticalOptimalControl.py  CarDynamics.py  ESDF.py  KinodynamicRRT.py  KinodynamicRRTStar.py  NumericalOptimalControl.py  State.py  TrajectoryNotebook.ipynb
sim/: CMakeLists.txt  compile_commands.json  package.xml
sim/.cache/clangd/index/: UnicycleModelNode.cpp.BC82E472EFB8BF73.idx
sim/config/: vehicle.config
sim/include/sim/: UnicycleModel.hpp  UnicycleModelNode.hpp
sim/launch/: diff_drive.launch.py  simulation.launch.py  world.launch.py
sim/models/vehicle/: model.sdf
sim/sdf/: environment.sdf
sim/src/: UnicycleModelNode.cpp
sim/urdf/: robot.urdf
sim/worlds/: empty.sdf  flatland.sdf  test.sdf  test_building.sdf
