<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mvielmetti@outlook.com">marshallvielmetti</maintainer>
  <license>MIT</license>

  <!-- build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>ros_gz_sim</build_depend>

  <!-- run dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
